# Lite-Component-Framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp  usage.md  usagec.cpp
include/: callback_manager.hpp  component.hpp  entity.hpp  entity_manager.hpp  id_.hpp  operating_message.hpp  single_class_set.hpp  type_id.hpp  void_any.hpp  void_any_config.hpp
